--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
 header h1:first-of-type {
   font-size: 1.8rem;
   font-weight: 700;
-  color: #399918; /* Vibrant orange for your name */
+  color: #9A208C; /* Vibrant orange for your name */
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Shadow for depth */
 }
 
